# MultimodalVideoChatbot

./: .gitignore  CMakeLists.txt  README.md
data/: ground_truth_captions.json  multilingual_tests.json
docker/: Dockerfile.gui  Dockerfile.server
docs/: API_REFERENCE.md  BUILD.md  EVALUATION.md  USER_GUIDE.md
gradio_demo/: app.py  backend_bridge.py
scripts/: benchmark_captions.sh  benchmark_search.sh
src/: CMakeLists.txt
src/captioning/: Captioner.cpp  Captioner.h
src/chatbot/: Chatbot.cpp  Chatbot.h
src/embedding/: Embedder.cpp  Embedder.h
src/gui/: CaptionTab.cpp  CaptionTab.h  ChatTab.cpp  ChatTab.h  main.cpp
src/server/: WebSocketServer.cpp  WebSocketServer.h
tests/: test_captioning.cpp  test_chat_formatting.cpp  test_retrieval.cpp
